"fixed locators, renamed methods, added allure reporting, modified methods to fix issues with failure when xml with tests is run, fixed methods duplication"

--- a/config.properties
+++ b/config.properties
@@ -1,3 +1,10 @@
+#Driver configuration
 driver=webdriver.chrome.driver
 path=/Users/marharyta-horbunova/Documents/project/webdrivers/chromedriver
+
+# Uncomment the following lines to use Gecko WebDriver for Firefox
+# driver=webdriver.gecko.driver
+# path=/Users/marharyta-horbunova/Documents/project/webdrivers/geckodriver
+
+#Host URL
 host=https://www.bbc.com/
